--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson13/index.html">Домашні завдання (Урок № 13).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson12/index.html">Домашні завдання (Урок № 12).</a>
 				</li>
 				<li>
