fill links by description

--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -76,25 +76,36 @@
 		<h1>Домашні завдання (Урок 13).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 0. Реалізувати рекурсивну функцію знаходження степеня числа
+					а </a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 1. Нехай X<sub>0</sub>=1, X<sub>i</sub>=X<sub>i-1</sub>+2i,
+					де i=1,2,... Визначити X<sub>10</sub>. Розв’язати з використанням рекурсивних і нерекурсивних алгоритмів.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">адача 2. Реалізувати бінарний пошук (розглядали на попередніх
+					уроках) з використанням рекурсивного алгоритму.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача 3. З використанням замикань розробити ітератор, тобто
+					функцію, що буде поступово за окремими викликами видавати по одне значення від заданого мінімального до
+					заданого максимального. Якщо значення досягне максимального, то наступним буде мінімальне значення. З
+					використанням цієї функції реалізувати перебір номерів місяців.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task05.html"></a>
+				<a target="_blank" href="./tasks/task05.html">Задача 4. З використанням замикань розробити ітератор, тобто
+					функцію, що буде поступово за окремими викликами видавати по одну букву наперед заданого слова. З
+					використанням нього розробити гру «Прекладач». Виводимо для користувача опис цього слова і по одну букву
+					користувач вводить переклад цього слова. Підрахувати кількість вгаданих букв.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task06.html"></a>
+				<a target="_blank" href="./tasks/task06.html">Задача 5. Тренажер додавання. Кожні 10 секунд користувачу задають
+					випадковий приклад з додавання двох цифр і робиться перевірка.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task07.html"></a>
+				<a target="_blank" href="./tasks/task07.html">Задача 6. Через 20 секунд перейти на сайт ukr.net. Для цього через
+					20 секунд після відкриття треба виконати команду.</a>
 			</li>
 		</ol>
 	</div>
