added solution for the 1st task

--- a/lesson13/tasks/task01.html
+++ b/lesson13/tasks/task01.html
@@ -75,9 +75,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
+		<h1>Задача 0. Реалізувати рекурсивну функцію знаходження степеня числа а.</h1>
 		<script>
-
+			function pow(a, n) {
+				if (n === 1) return a  // якщо степінь до якої підноситься чило = 1, то повертаємо число a
+				else return pow(a, n - 1) * a // інакше рекурсивно викликаємо функцію де значення степені змешуємо на 1 і множимо на a
+			}
+			console.log(pow(2, 8));
+			console.log(pow(5, 3));
 		</script>
 	</div>
 </body>
