--- a/lesson13/tasks/task04.html
+++ b/lesson13/tasks/task04.html
@@ -75,9 +75,22 @@
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
+		<h1>Задача 3. З використанням замикань розробити ітератор, тобто
+			функцію, що буде поступово за окремими викликами видавати по одне значення від заданого мінімального до
+			заданого максимального. Якщо значення досягне максимального, то наступним буде мінімальне значення. З
+			використанням цієї функції реалізувати перебір номерів місяців.</h1>
 		<script>
-
+			function getMonthIterator(nextMonth, min = 1, max = 12) {
+				function getNextMonth() {
+					nextMonth === max ? nextMonth = 1 : ++nextMonth
+					return nextMonth
+				}
+				return getNextMonth
+			}
+			let nextMonth = getMonthIterator(0)
+			for (let i = 0; i < 13; i++) {
+				console.log(nextMonth());
+			}
 		</script>
 	</div>
 </body>
