--- a/lesson13/tasks/task07.html
+++ b/lesson13/tasks/task07.html
@@ -75,9 +75,10 @@
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
+		<h1>Задача 6. Через 20 секунд перейти на сайт ukr.net. Для цього через
+			20 секунд після відкриття треба виконати команду.</h1>
 		<script>
-
+			setTimeout(() => window.location.href = 'https://www.ukr.net/', 20000)
 		</script>
 	</div>
 </body>
