fixed mistakes in the text

--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -77,14 +77,14 @@
 		<ol>
 			<li>
 				<a target="_blank" href="./tasks/task01.html">Задача 0. Реалізувати рекурсивну функцію знаходження степеня числа
-					а </a>
+					а.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task02.html">Задача 1. Нехай X<sub>0</sub>=1, X<sub>i</sub>=X<sub>i-1</sub>+2i,
 					де i=1,2,... Визначити X<sub>10</sub>. Розв’язати з використанням рекурсивних і нерекурсивних алгоритмів.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html">адача 2. Реалізувати бінарний пошук (розглядали на попередніх
+				<a target="_blank" href="./tasks/task03.html">Задача 2. Реалізувати бінарний пошук (розглядали на попередніх
 					уроках) з використанням рекурсивного алгоритму.</a>
 			</li>
 			<li>
