--- a/lesson14/tasks/task02.html
+++ b/lesson14/tasks/task02.html
@@ -75,8 +75,23 @@
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
+		<h1>Задача 2. Розробити функцію, у яку передають об’єкт (день, місяць, рік). Визначити, який буде рік через N
+			місяців.</h1>
 		<script>
+			let currentDate = {
+				day: 2,
+				month: 8,
+				year: 2023,
+			}
+
+			function getFutureYear(date, N) {
+				let futureYear = (Math.round(((date.month + N)) / 12) + date.year)
+				return futureYear
+			}
+
+			const N = parseInt(prompt('Введіть кількість місяців'))
+			const futureYear = getFutureYear(currentDate, N)
+			alert(`Через ${N} місяців буде ${futureYear} рік.`);
 		</script>
 	</div>
 </body>
