fill links by description

--- a/lesson15/index.html
+++ b/lesson15/index.html
@@ -76,7 +76,26 @@
 		<h1>Домашні завдання (Урок 15).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 0. Дано два об’єкта. Обидва містять масив цілих чисел. При
+					цьому у одному з них є функція знаходження суми, а у іншому – функція для знаходження добутку тих, які
+					знаходяться між заданими мінімальним і максимальних значенням.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task02.html">Задача 1. Створити об’єкт «Тир». У масиві зберігаються 1, якщо у
+					цьому квадраті є заєць і 0 в іншому випадку.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task03.html">Задача 2. Створити об’єкт «Авто».</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task04.html">Задача 3. Розробити клас MultChecker для перевірки таблиці
+					множення</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task05.html">Задача 4. Розробити клас Baner</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task06.html">Задача 5. Розробити клас «Керівник танців»</a>
 			</li>
 		</ol>
 	</div>
