--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson15/index.html">Домашні завдання (Урок № 15).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson14/index.html">Домашні завдання (Урок № 14).</a>
 				</li>
 				<li>
