--- a/lesson16/index.html
+++ b/lesson16/index.html
@@ -76,16 +76,28 @@
 		<h1>Домашні завдання (Урок 16).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Створити клас TDate для роботи із датами у форматі
+					“день.місяць.рік”. Дата представляється структурою із
+					трьома полями. Реалізувати методи збільшення/зменшення дати на певну кількість днів, місяців чи років.
+					Введення та
+					виведення дати реалізувати за допомогою методу toString.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Створити клас TMoney для роботи з грошовими сумами. Сума
+					повинна зберігатися у вигляді доларового еквіваленту.
+					Реалізувати методи додавання/вилучення грошової маси, вказуючи необхідну суму у гривнях, та визначення курсу
+					долара, при
+					якому сума у гривнях збільшиться на 100. Курс долара зберігати в окремому полі.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3. Об’єкт “Фірма” (використати члени-класи).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача. Створити клас TBankomat, який моделює роботу банкомата.
+					Клас повинен містити поля для зберігання кількості купюр
+					кожного із номіналів від 5 до 200 гривень. Реалізувати методи знаходження максимальної та мінімальної сум, які
+					може
+					видати банкомат, та метод зняття деякої суми.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task05.html"></a>
