--- a/lesson16/tasks/task01.html
+++ b/lesson16/tasks/task01.html
@@ -75,8 +75,218 @@
 </head>
 <body>
 	<div class="container">
-		<h1> </h1>
+		<h1>Задача 1. Створити клас TDate для роботи із датами у форматі “день.місяць.рік”. Дата представляється структурою
+			із трьома полями. Реалізувати методи збільшення/зменшення дати на певну кількість днів, місяців чи років. Введення
+			та виведення дати реалізувати за допомогою методу toString. </h1>
 		<script>
+			//-----Властивості-характеристики
+			//   день
+			//   місяць
+			//   рік
+			//-----Методи
+			// Зібльшення дати на певну кулькість днів
+			// Зібльшення дати на певну кулькість місяців
+			// Зібльшення дати на певну кулькість років
+			// Введення та виведення дати реалізуати за допомогою меоду toString
+			class TDate {
+				#day
+				#month
+				#year
+				constructor(day, month, year) {
+					this.Day = day
+					this.Month = month
+					this.Year = year
+				}
+
+				get Day() {
+					return this.#day
+				}
+
+				set Day(newValue) {
+					if (newValue < 1 || newValue > 31)
+						throw new Error('Entered incorrect day')
+
+					this.#day = newValue
+				}
+
+				get Month() {
+					return this.#month
+				}
+
+				set Month(newValue) {
+					if (newValue < 1 || newValue > 12)
+						throw new Error('Entered incorrect month')
+
+					this.#month = newValue
+				}
+
+				get Year() {
+					return this.#year
+				}
+
+				set Year(newValue) {
+					if (isNaN(newValue))
+						throw new Error('Entered incorrect year')
+
+					this.#year = newValue
+				}
+				// додавання років
+				shiftYears(addedYears) {
+					this.Year += addedYears
+				}
+				// віднімання років
+				unshiftYears(removedYears) {
+					this.Year -= removedYears
+				}
+				// додавання місяців
+				shiftMonths(addedMonths) {
+					let monthSum = this.Month + addedMonths
+					if (monthSum > 12) {
+						this.Year += Math.floor(monthSum / 12)
+
+						let restOfMonths = addedMonths % 12
+						this.Month = ((this.Month - 1 + restOfMonths) % 12) + 1
+					} else
+						this.Month = ((this.Month - 1 + addedMonths) % 12) + 1
+				}
+				// віднімання місців
+				unshiftMonths(removedMonts, maxMonth = 12) {
+					let monthsToRemove = removedMonts // отримання у змінну кількотсі місяців, що потрібно відняти
+
+					let resultOfMonthsSubtraction // змінна у яку буде присвоюватись результат віднімання місяців
+
+					let currentMonth = this.Month
+
+					let yearsToRemove = 0
+
+					while (monthsToRemove !== 0) {
+						resultOfMonthsSubtraction = currentMonth - monthsToRemove
+
+						if (resultOfMonthsSubtraction <= 0) {
+							monthsToRemove -= currentMonth
+							currentMonth = maxMonth
+							yearsToRemove++
+						} else {
+							currentMonth = resultOfMonthsSubtraction
+							monthsToRemove -= monthsToRemove
+						}
+
+					}
+
+					if (yearsToRemove > 0)
+						this.unshiftYears(yearsToRemove)
+
+					this.Month = currentMonth
+
+				}
+				// отримання кількості днів у місяці
+				getDaysNumber(monthNumber) {
+					let monthDaysNumber
+					switch (monthNumber) {
+						case 1:
+						case 3:
+						case 5:
+						case 7:
+						case 8:
+						case 10:
+						case 12: monthDaysNumber = 31
+							break
+						case 4:
+						case 6:
+						case 9:
+						case 11: monthDaysNumber = 30
+							break
+						case 2: monthDaysNumber = 28
+							break
+					}
+					if (this.Year % 4 === 0 && monthDaysNumber === 28)
+						monthDaysNumber += 1
+					return monthDaysNumber
+				}
+				// додавання днів
+				shiftDays(addedDays) {
+					let daysToAdd = addedDays // присвоїв в змінну кількість днів, що хочу додати
+
+					let startMonthDay = this.Day // присвоїв у змінну поточну дату для обчислення різниці заг. к-ті днів і пот числа
+
+					while (daysToAdd !== 0) {
+						let endMonthDay = this.getDaysNumber(this.Month) // отримав кількість днів поточного місяця
+
+						let daysDifference = endMonthDay - startMonthDay // обчислив різницю між поточною датою і кількістю днів у місяці
+
+						if (daysToAdd > endMonthDay) {
+							this.Day = 1
+							this.shiftMonths(1)
+							startMonthDay = 0
+							daysToAdd -= daysDifference // відняв від кількості днів різницю
+						} else {
+							this.Day = daysToAdd // доав різницю до кількості днів
+							daysToAdd -= daysToAdd // відняв залишку залишок
+						}
+					}
+				}
+				// віднімання днів
+				unshiftDays(removedDays) {
+					let daysToRemove = removedDays
+
+					let resultOfDaySubstuction
+
+					let currentDayNumber = this.Day
+
+					while (daysToRemove !== 0) {
+						resultOfDaySubstuction = currentDayNumber - daysToRemove
+
+						if (resultOfDaySubstuction <= 0) {
+							daysToRemove -= currentDayNumber
+							this.unshiftMonths(1)
+							currentDayNumber = this.getDaysNumber(this.Month)
+						} else {
+							currentDayNumber = resultOfDaySubstuction
+							daysToRemove -= daysToRemove
+						}
+
+					}
+					this.Day = currentDayNumber
+				}
+				//-------
+				toString() {
+					return `${this.Day}.${this.Month}.${this.Year}`
+				}
+				//-------
+				setDate(dateString) {
+					// let splitDate = dateString.split('.').map(string => Number(string))
+					let splitDate = dateString.split('.')
+
+					this.Day = parseInt(splitDate[0])
+					this.Month = parseInt(splitDate[1])
+					this.Year = parseInt(splitDate[2])
+				}
+			}
+
+			let date_1 = new TDate(1, 1, 2023)
+			document.write(date_1 + ' - оринінальна дата побудована через клас TDate <br>')
+			// додавання 549 днів
+			date_1.shiftDays(549)
+			document.write(date_1 + ' - дата після додавання до неї 549 днів <br>')
+			// віднімання 149 днів
+			date_1.unshiftDays(128)
+			document.write(date_1 + ' - дата після віднімання від неї 128 днів <br>')
+			// віднімання 46 місяців 
+			date_1.unshiftMonths(46)
+			document.write(date_1 + ' - дата після віднімання від неї 46 місяців <br>')
+			// додавання 94 місяців 
+			date_1.shiftMonths(94)
+			document.write(date_1 + ' - дата після додавання до неї 94 місяців <br>')
+			// додавання 13 років
+			date_1.shiftYears(13)
+			document.write(date_1 + ' - дата після додавання до неї 13 років <br>')
+			// віднімання 99 років
+			date_1.unshiftYears(99)
+			document.write(date_1 + ' - дата після віднімання від неї 99 років <br>')
+			// встановлення дати через рядок 
+			date_1.setDate('24.08.1991')
+			document.write(date_1 + ' - дата після її введення з рядка <br>')
+
 
 		</script>
 	</div>
